# pichi

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in
doc/: benchmark.tex  diagrams.tex  implementation.tex  laphtc.tex  pichi.tex  todo.tex  usage.tex
include/: contraction.h  diagrams.h  graph.h  slice_iterator.h  string_utils.h  tensor.h  timing.h  util.h
include/laph/: multi_compare.h  tensor_handler.h
include/pichi/: contraction.h  graph.h  op_tensor.h  pichi.h  tensor.h
lib/: CMakeLists.txt  contraction.cc  contraction.h  diagrams.cc  diagrams.h  double_slice_iterator.cc  graph.cc  op_tensor.cc  single_slice_iterator.cc  slice_iterator.cc  slice_iterator.h  string_utils.cc  tensor.cc  tensor.h  util.cc
test/: CMakeLists.txt  test_contract.cc  test_slice_iterator.cc  test_tensor.cc
test/bench/: CMakeLists.txt  bench1.cc  bench2.cc
test/prop/: test_linearity.cc
test/unit/: CMakeLists.txt  test_compute.cc  test_contract.cc  test_contract_errors.cc  test_contraction_collection.cc  test_contraction_storage_rules.cc  test_diagrams.cc  test_double_slice_iterator.cc  test_extract.cc  test_graph.cc  test_graph_split.cc  test_identify.cc  test_optensor.cc  test_single_slice_iterator.cc  test_split_string.cc  test_string_utils.cc  test_tensor.cc  test_tensor_addition.cc  test_tensor_algebra.cc  test_tensor_getsetslice.cc  test_tensor_storage.cc
